# TWUIEditor

./: .gitignore  .gitmodules  CHANGELOG.md  NOTICE.md  README.md  RELEASING.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
mcp-twui/: README.md
mcp-twui/design/: mcp-server-design.md
mcp-twui/knowledge/: 00-overview.md  01-file-format.md  02-versions.md  03-attributes.md  04-callbacks-cco.md  05-tooltips.md  06-templates-and-data.md  07-gotchas.md  08-script-bridge.md
mcp-twui/knowledge/recipes/: effect-bundle-button.md  effect-bundle-toggle.md  purchase-button.md
scripts/: generate-icon.cjs
src/: App.tsx  index.css  keybinds.ts  main.tsx  sync.ts  theme.ts  updater.ts  vite-env.d.ts  windows.ts
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  bin.rs  bug_report.rs  cco_docs.rs  cco_shorthand.rs  character.rs  commands.rs  db.rs  image.rs  lib.rs  loc.rs  main.rs  schema.rs  schema_embed.rs  script.rs  state.rs  update.rs
src-tauri/src/model/: guid.rs  mod.rs  parse.rs  serialize.rs
src-tauri/src/source/: folder.rs  mod.rs  overlay.rs  pack.rs  workspace.rs
src-tauri/src/web/: auth.rs  mod.rs  routes.rs  server.rs
src/components/: ContextMenu.tsx  Markdown.tsx
src/docs/: twui-versions.md
src/ipc/: commands.ts  dialog.ts  invoke.ts
src/layout/: compute.ts
src/panels/: BugReportPanel.tsx  CharactersPanel.tsx  DiagnosisPanel.tsx  DockLayout.tsx  DocsPanel.tsx  FileTabs.tsx  HostFileBrowser.tsx  InsertFromFileDialog.tsx  InspectorPanel.tsx  LayersPanel.tsx  LoadingScreen.tsx  NewFileDialog.tsx  PackEditorPanel.tsx  PackFilesPanel.tsx  PerspectivePanel.tsx  ScriptPanel.tsx  SearchPalette.tsx  SettingsPanel.tsx  ToolPalette.tsx  ToolsPanel.tsx  TreePanel.tsx  UnsavedChangesDialog.tsx  UpdateBanner.tsx  VisualizerPanel.tsx  componentMenu.ts  visualizerCapture.ts
src/state/: store.ts  useLayoutInputs.ts
src/twui/: ambition.ts  cco.ts  cco_docs.ts  cco_shorthand.ts  colour.ts  context.ts  creator.ts  doc.ts  fonts.ts  inherit.ts  lua.ts  migrate.ts  mutate.ts  players.ts  posts.ts  recordLoc.ts  records.ts  schema.ts  script.ts  search.ts  sim.ts  skeleton.ts  template.ts  tooltip.ts  visibility.ts
src/twui/diagnostics/: classify.ts  engine.ts  index.ts  types.ts
src/twui/diagnostics/rules/: attrValue.ts  attrVersion.ts  duplicateGuids.ts  hierarchyComponents.ts  imageRefs.ts  index.ts  requiredAttrs.ts  stateRefs.ts
src/types/: twui.ts
