[package]
name = "twui-editor"
version = "0.0.5"
description = "TWUI XML Viewer & Editor"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "twui_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.36"
thiserror = "1"
lru = "0.12"
# Parse the user's local RPFM `.ron` schema (to decode binary db tables from packs).
ron = "0.8"
rand = "0.8"
percent-encoding = "2"

# Portable self-replacing updater: fetch the latest GitHub release, download the portable
# exe, and swap the running binary in place. `multipart` is also used to upload bug-report
# images to a Discord webhook (see bug_report.rs).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart"] }
self-replace = "1"
semver = "1"

# Bug reporting: capture the app window (xcap), PNG-encode it (png, independent of the
# optional `image`/`dds` feature), and decode inline base64 images for webhook upload.
xcap = "0.0"
png = "0.17"
base64 = "0.22"

# DDS decode support (ink/material textures are BCn/DX10 .dds).
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
ddsfile = { version = "0.5", optional = true }
image_dds = { version = "0.7", optional = true, default-features = false, features = ["ddsfile", "image"] }

[features]
default = ["dds"]
dds = ["dep:image", "dep:ddsfile", "dep:image_dds"]

[profile.dev]
incremental = true
