[package]
name = "twui-editor"
version = "0.0.7"
description = "TWUI XML Viewer & Editor"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "twui_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Compress the bundled RPFM `.ron` schemas at build time (they are ~20 MB of RON text;
# zstd shrinks them ~10x so the auto-updated binary stays small). Decompressed at runtime.
zstd = "0.13"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.36"
thiserror = "1"
lru = "0.12"
# Read Total War `.pack` archives and decode binary db/loc tables + RPFM `.ron` schemas.
# MIT-licensed, headless (no Qt). Default features (only `integration_assembly_kit`, which the
# `uic` module requires) are kept; the heavy `integration_git`/`integration_sqlite` are off.
rpfm_lib = "4.7"
# Decompress the build-time-zstd'd RPFM schemas (see build.rs + schema_embed.rs).
zstd = "0.13"
ron = "0.8"
rand = "0.8"
percent-encoding = "2"

# Experimental web access point: serve the editor over HTTP so it can be reached from a
# browser on the LAN / Tailscale. The desktop app itself hosts the server (see web/).
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync"] }
tower-http = { version = "0.6", features = ["catch-panic"] }
rust-embed = "8"
mime_guess = "2"

# Portable self-replacing updater: fetch the latest GitHub release, download the portable
# exe, and swap the running binary in place. `multipart` is also used to upload bug-report
# images to a Discord webhook (see bug_report.rs).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart"] }
self-replace = "1"
semver = "1"

# Bug reporting: capture the app window (xcap), PNG-encode it (png, independent of the
# optional `image`/`dds` feature), and decode inline base64 images for webhook upload.
xcap = "0.0"
png = "0.17"
base64 = "0.22"

# DDS decode support (ink/material textures are BCn/DX10 .dds).
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
ddsfile = { version = "0.5", optional = true }
image_dds = { version = "0.7", optional = true, default-features = false, features = ["ddsfile", "image"] }

[features]
default = ["dds"]
dds = ["dep:image", "dep:ddsfile", "dep:image_dds"]

[profile.dev]
incremental = true
